--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0145.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0145.html
@@ -1,70 +1,55 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
   <head>
-    <meta name="ocr-id" value="abbyy" />
-    <meta name="ocr-recognized" value="lines text" />
-    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css" />
-    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
+    <meta name="ocr-id" value="abbyy"/>
+    <meta name="ocr-recognized" value="lines text"/>
+    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css"/>
+    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8"/>
     <title>ocr</title>
   </head>
   <body>
     <div class="ocr_page" id="i0145.png">
-      <!--<div class="ocr_carea" title="bbox 64 1320 1844 1846">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 406 1336 1496 1406">
         <span id="w_0" class="ocr_word" title="bbox 406 1336 686 1400">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ELIAE</ins>
-            <del title="nlp 0.90">ELIAE</del>
+            <ins title="nlp 2.00">ELIAE</ins>
           </span>
         </span>
         <span id="w_1" class="ocr_word" title="bbox 746 1336 1018 1402">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">(OLIM</ins>
-            <del title="nlp 0.90">(OLIM</del>
+            <ins title="nlp 2.00">(OLIM</ins>
           </span>
         </span>
         <span id="w_2" class="ocr_word" title="bbox 1078 1340 1496 1406">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">DAVIDIS)</ins>
-            <del title="nlp 0.90">DAVIDIS</del>
+            <ins title="nlp 2.00">DAVIDIS)</ins>
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 78 1552 1828 1638">
         <span id="w_3" class="ocr_word" title="bbox 78 1552 204 1630">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">IN</ins>
-            <del title="nlp 0.90">IN</del>
+            <ins title="nlp 2.00">IN</ins>
           </span>
         </span>
         <span id="w_4" class="ocr_word" title="bbox 262 1554 1038 1634">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ARISTOTELIS</ins>
-            <del title="nlp 0.90">ARISTOTELIS</del>
+            <ins title="nlp 2.00">ARISTOTELIS</ins>
           </span>
         </span>
         <span id="w_5" class="ocr_word" title="bbox 1102 1556 1828 1638">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">CATEGORIAS</ins>
-            <del title="nlp 0.90">CATEGORIAS</del>
+            <ins title="nlp 2.00">CATEGORIAS</ins>
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 580 1774 1318 1842">
         <span id="w_6" class="ocr_word" title="bbox 580 1774 1318 1842">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">COMMENTARIUM</ins>
-            <del title="nlp 0.90">COMMENTARIUM</del>
+            <ins title="nlp 2.00">COMMENTARIUM</ins>
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
     </div>
   </body>
 </html>
