--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0146.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0146.html
@@ -1,32 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
   <head>
-    <meta name="ocr-id" value="abbyy" />
-    <meta name="ocr-recognized" value="lines text" />
-    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css" />
-    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
+    <meta name="ocr-id" value="abbyy"/>
+    <meta name="ocr-recognized" value="lines text"/>
+    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css"/>
+    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8"/>
     <title>ocr</title>
   </head>
   <body>
     <div class="ocr_page" id="i0146.png">
-      <!--<div class="ocr_carea" title="bbox 1014 1346 1556 1780">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 1191 1356 1410 1398">
         <span id="w_0" class="ocr_word" title="bbox 1191 1356 1352 1398">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">SIGL</ins>
-            <del title="nlp 0.90">SIGL</del>
-          </span>
-        </span>
-        <span id="w_1" class="ocr_word" title="bbox 1374 1356 1410 1396">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">A</ins>
-            <del title="nlp 0.90">A</del>
+            <ins title="nlp 2.00">SIGLA</ins>
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 1029 1529 1539 1564">
         <span id="w_2" class="ocr_word" title="bbox 1029 1531 1057 1564">
           <span class="alternatives">
@@ -36,13 +25,12 @@
         </span>
         <span id="w_3" class="ocr_word" title="bbox 1085 1546 1129 1558">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">=</ins>
+            <ins title="nlp 2.00">=</ins>
           </span>
         </span>
         <span id="w_4" class="ocr_word" title="bbox 1156 1530 1444 1564">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Hamiltouianus</ins>
-            <del title="nlp 0.90">Hamiltouianus</del>
+            <ins title="nlp 2.00">Hamiltonianus</ins>
           </span>
         </span>
         <span id="w_5" class="ocr_word" title="bbox 1472 1529 1539 1563">
@@ -60,13 +48,12 @@
         </span>
         <span id="w_7" class="ocr_word" title="bbox 1084 1616 1128 1628">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">=</ins>
+            <ins title="nlp 2.00">=</ins>
           </span>
         </span>
         <span id="w_8" class="ocr_word" title="bbox 1155 1601 1351 1634">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Marcianus</ins>
-            <del title="nlp 0.90">Marcianus</del>
+            <ins title="nlp 2.00">Marcianus</ins>
           </span>
         </span>
         <span id="w_9" class="ocr_word" title="bbox 1380 1599 1447 1633">
@@ -78,24 +65,22 @@
       <span class="ocr_line" title="bbox 1028 1669 1453 1704">
         <span id="w_10" class="ocr_word" title="bbox 1028 1672 1053 1704">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">p</ins>
-            <del title="nlp 0.90">p</del>
+            <ins title="nlp 2.00">P</ins>
           </span>
         </span>
         <span id="w_11" class="ocr_word" title="bbox 1081 1686 1124 1697">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">=</ins>
+            <ins title="nlp 2.00">=</ins>
           </span>
         </span>
         <span id="w_12" class="ocr_word" title="bbox 1150 1671 1333 1703">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Parisinus</ins>
-            <del title="nlp 0.90">Parisinus</del>
+            <ins title="nlp 2.00">Parisinus</ins>
           </span>
         </span>
-        <span id="w_13" class="ocr_word" title="bbox 1363 1669 1453 1703" xml:lang="grc">
+        <span id="w_13" class="ocr_word" title="bbox 1363 1669 1453 1703" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">19ι</ins>
+            <ins title="nlp 2.00">1900</ins>
           </span>
         </span>
       </span>
@@ -108,24 +93,20 @@
         </span>
         <span id="w_15" class="ocr_word" title="bbox 1083 1756 1127 1768">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">=</ins>
+            <ins title="nlp 2.00">=</ins>
           </span>
         </span>
         <span id="w_16" class="ocr_word" title="bbox 1154 1740 1328 1774">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Brandisii</ins>
-            <del title="nlp 0.90">Brandisii</del>
+            <ins title="nlp 2.00">Brandisii</ins>
           </span>
         </span>
         <span id="w_17" class="ocr_word" title="bbox 1356 1740 1487 1773">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">scholia</ins>
-            <del title="nlp 0.90">scholia</del>
+            <ins title="nlp 2.00">scholia</ins>
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
     </div>
   </body>
 </html>
