--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0595.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0595.html
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
   <head>
-    <meta name="ocr-id" value="abbyy" />
-    <meta name="ocr-recognized" value="lines text" />
-    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css" />
-    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
+    <meta name="ocr-id" value="abbyy"/>
+    <meta name="ocr-recognized" value="lines text"/>
+    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css"/>
+    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8"/>
     <title>ocr</title>
   </head>
   <body>
     <div class="ocr_page" id="i0595.png">
-      <!--<div class="ocr_carea" title="bbox 554 174 1654 400">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 568 316 1430 396">
         <span id="w_0" class="ocr_word" title="bbox 568 316 1430 396">
           <span class="alternatives">
@@ -19,10 +17,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
-      <!--<div class="ocr_carea" title="bbox 84 496 1910 1038">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 238 518 1772 602">
         <span id="w_1" class="ocr_word" title="bbox 238 524 370 602">
           <span class="alternatives">
@@ -43,8 +37,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 100 722 1894 822">
         <span id="w_4" class="ocr_word" title="bbox 100 730 292 822">
           <span class="alternatives">
@@ -59,8 +51,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 424 954 1586 1034">
         <span id="w_6" class="ocr_word" title="bbox 424 954 1586 1034">
           <span class="alternatives">
@@ -69,15 +59,10 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
-      <!--<div class="ocr_carea" title="bbox 664 1392 1336 1440">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 680 1399 1320 1435">
         <span id="w_7" class="ocr_word" title="bbox 680 1401 884 1435">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">GONSILIO</ins>
-            <del title="nlp 0.90">GONSILIO</del>
+            <ins title="nlp 2.00">CONSILIO</ins>
           </span>
         </span>
         <span id="w_8" class="ocr_word" title="bbox 912 1401 968 1434">
@@ -93,10 +78,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
-      <!--<div class="ocr_carea" title="bbox 338 1584 1668 1644">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 354 1594 1652 1639">
         <span id="w_10" class="ocr_word" title="bbox 354 1597 672 1639">
           <span class="alternatives">
@@ -104,9 +85,9 @@
             <del title="nlp 0.90">ACADEMIAE</del>
           </span>
         </span>
-        <span id="w_11" class="ocr_word" title="bbox 704 1595 1058 1637" xml:lang="grc">
+        <span id="w_11" class="ocr_word" title="bbox 704 1595 1058 1637" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">λ</ins>
+            <ins title="nlp 2.00">LITTERARUM</ins>
           </span>
         </span>
         <span id="w_12" class="ocr_word" title="bbox 1091 1594 1286 1636">
@@ -122,10 +103,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
-      <!--<div class="ocr_carea" title="bbox 572 2398 1442 2466">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 587 2409 1425 2462">
         <span id="w_14" class="ocr_word" title="bbox 587 2413 964 2462">
           <span class="alternatives">
@@ -140,10 +117,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
-      <!--<div class="ocr_carea" title="bbox 540 2964 1484 3204">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 851 2974 1169 3022">
         <span id="w_16" class="ocr_word" title="bbox 851 2974 1169 3022">
           <span class="alternatives">
@@ -152,8 +125,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 555 3073 1467 3118">
         <span id="w_17" class="ocr_word" title="bbox 555 3080 693 3118">
           <span class="alternatives">
@@ -194,8 +165,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
     </div>
   </body>
 </html>
