--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0332.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0332.html
@@ -1,86 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
   <head>
-    <meta name="ocr-id" value="abbyy" />
-    <meta name="ocr-recognized" value="lines text" />
-    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css" />
-    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
+    <meta name="ocr-id" value="abbyy"/>
+    <meta name="ocr-recognized" value="lines text"/>
+    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css"/>
+    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8"/>
     <title>ocr</title>
   </head>
   <body>
     <div class="ocr_page" id="i0332.png">
-      <!--<div class="ocr_carea" title="bbox 312 248 2166 776">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 706 270 1766 354">
-        <span id="w_0" class="ocr_word" title="bbox 706 276 766 354">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">C</ins>
-            <del title="nlp 0.90">C</del>
-          </span>
-        </span>
-        <span id="w_1" class="ocr_word" title="bbox 792 278 862 352">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">O</ins>
-            <del title="nlp 0.90">O</del>
-          </span>
-        </span>
-        <span id="w_2" class="ocr_word" title="bbox 890 276 980 352">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">M</ins>
-            <del title="nlp 0.90">M</del>
-          </span>
-        </span>
-        <span id="w_3" class="ocr_word" title="bbox 1008 274 1096 352">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">M</ins>
-            <del title="nlp 0.90">M</del>
-          </span>
-        </span>
         <span id="w_4" class="ocr_word" title="bbox 1124 272 1192 350">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">E</ins>
-            <del title="nlp 0.90">E</del>
-          </span>
-        </span>
-        <span id="w_5" class="ocr_word" title="bbox 1220 272 1296 350">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">N</ins>
-            <del title="nlp 0.90">N</del>
-          </span>
-        </span>
-        <span id="w_6" class="ocr_word" title="bbox 1334 274 1376 348">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">i</ins>
-            <del title="nlp 0.90">i</del>
-          </span>
-        </span>
-        <span id="w_7" class="ocr_word" title="bbox 1414 274 1488 348">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">A</ins>
-            <del title="nlp 0.90">A</del>
-          </span>
-        </span>
-        <span id="w_8" class="ocr_word" title="bbox 1518 270 1596 348">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">R</ins>
-            <del title="nlp 0.90">R</del>
-          </span>
-        </span>
-        <span id="w_9" class="ocr_word" title="bbox 1624 270 1662 346">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">I</ins>
-            <del title="nlp 0.90">I</del>
-          </span>
-        </span>
-        <span id="w_10" class="ocr_word" title="bbox 1690 272 1766 346">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">A</ins>
-            <del title="nlp 0.90">A</del>
+            <ins title="nlp 2.00">COMMENTARIA</ins>
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 328 464 2150 570">
         <span id="w_11" class="ocr_word" title="bbox 328 478 528 570">
           <span class="alternatives">
@@ -95,8 +30,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 930 682 1550 772">
         <span id="w_13" class="ocr_word" title="bbox 930 682 1550 772">
           <span class="alternatives">
@@ -105,10 +38,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
-      <!--<div class="ocr_carea" title="bbox 824 1384 1660 1438">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 838 1394 1643 1433">
         <span id="w_14" class="ocr_word" title="bbox 838 1398 977 1433">
           <span class="alternatives">
@@ -135,10 +64,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
-      <!--<div class="ocr_carea" title="bbox 576 1566 1916 1632">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 591 1578 1900 1627">
         <span id="w_18" class="ocr_word" title="bbox 591 1585 908 1627">
           <span class="alternatives">
@@ -165,10 +90,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
-      <!--<div class="ocr_carea" title="bbox 448 2244 2038 2458">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 954 2253 1522 2303">
         <span id="w_22" class="ocr_word" title="bbox 954 2253 1315 2303">
           <span class="alternatives">
@@ -183,8 +104,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 463 2412 2021 2453">
         <span id="w_24" class="ocr_word" title="bbox 463 2416 589 2453">
           <span class="alternatives">
@@ -235,10 +154,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
-      <!--<div class="ocr_carea" title="bbox 754 3006 1730 3246">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 1083 3016 1394 3066">
         <span id="w_32" class="ocr_word" title="bbox 1083 3016 1394 3066">
           <span class="alternatives">
@@ -247,8 +162,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 769 3119 1714 3159">
         <span id="w_33" class="ocr_word" title="bbox 769 3119 910 3155">
           <span class="alternatives">
@@ -281,8 +194,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 1167 3207 1312 3242">
         <span id="w_38" class="ocr_word" title="bbox 1167 3207 1312 3242">
           <span class="alternatives">
@@ -291,8 +202,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
     </div>
   </body>
 </html>
