--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0333.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0333.html
@@ -1,45 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
   <head>
-    <meta name="ocr-id" value="abbyy" />
-    <meta name="ocr-recognized" value="lines text" />
-    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css" />
-    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
+    <meta name="ocr-id" value="abbyy"/>
+    <meta name="ocr-recognized" value="lines text"/>
+    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css"/>
+    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8"/>
     <title>ocr</title>
   </head>
   <body>
     <div class="ocr_page" id="i0333.png">
-      <!--<div class="ocr_carea" title="bbox 1586 378 2048 490">-->
-      <!--<p>-->
-      <span class="ocr_line" title="bbox 1589 391 2031 477">
-        <span id="w_0" class="ocr_word" title="bbox 1589 400 1680 477">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">phi</ins>
-            <del title="nlp 0.90">phi</del>
-          </span>
-        </span>
-        <span id="w_1" class="ocr_word" title="bbox 1702 391 2031 477">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ioaopher</ins>
-            <del title="nlp 0.90">ioaopher</del>
-          </span>
-        </span>
-      </span>
-      <!--</p>-->
-      <!--</div>-->
-      <!--<div class="ocr_carea" title="bbox 62 284 1896 998">-->
-      <!--<p>-->
+      <span class="ocr_line" title="bbox 1589 391 2031 477"/>
       <span class="ocr_line" title="bbox 722 302 1502 380">
         <span id="w_2" class="ocr_word" title="bbox 722 302 1240 380">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">DAVIDIS</ins>
             <del title="nlp 0.90">DAVIDIS</del>
-          </span>
-        </span>
-        <span id="w_3" class="ocr_word" title="bbox 1390 314 1502 376">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">the</ins>
-            <del title="nlp 0.90">the</del>
           </span>
         </span>
       </span>
@@ -66,8 +41,7 @@
         </span>
         <span id="w_7" class="ocr_word" title="bbox 492 712 1204 792">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">PORPHYPvII</ins>
-            <del title="nlp 0.90">PORPHYPvII</del>
+            <ins title="nlp 2.00">PORHYRII</ins>
           </span>
         </span>
         <span id="w_8" class="ocr_word" title="bbox 1262 712 1892 792">
@@ -77,8 +51,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 606 930 1346 994">
         <span id="w_9" class="ocr_word" title="bbox 606 930 1346 994">
           <span class="alternatives">
@@ -87,10 +59,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
-      <!--<div class="ocr_carea" title="bbox 652 1428 1328 1476">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 667 1436 1312 1472">
         <span id="w_10" class="ocr_word" title="bbox 667 1437 875 1472">
           <span class="alternatives">
@@ -111,10 +79,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
-      <!--<div class="ocr_carea" title="bbox 324 1600 1664 1660">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 339 1609 1648 1655">
         <span id="w_13" class="ocr_word" title="bbox 339 1612 658 1655">
           <span class="alternatives">
@@ -136,14 +100,10 @@
         </span>
         <span id="w_16" class="ocr_word" title="bbox 1316 1609 1648 1651">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">I’.nRL’SSICAE</ins>
+            <ins title="nlp 2.00">BORUSSICAE</ins>
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
-      <!--<div class="ocr_carea" title="bbox 906 2138 1074 2176">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 921 2144 1058 2171">
         <span id="w_17" class="ocr_word" title="bbox 921 2144 1058 2171">
           <span class="alternatives">
@@ -152,14 +112,10 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
-      <!--<div class="ocr_carea" title="bbox 714 2374 1278 2438">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 729 2384 1261 2433">
         <span id="w_18" class="ocr_word" title="bbox 729 2385 1027 2433">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">AD0LFU8</ins>
+            <ins title="nlp 2.00">ADOLFUS</ins>
           </span>
         </span>
         <span id="w_19" class="ocr_word" title="bbox 1067 2384 1261 2432">
@@ -169,10 +125,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
-      <!--<div class="ocr_carea" title="bbox 510 3016 1486 3254">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 842 3025 1151 3073">
         <span id="w_20" class="ocr_word" title="bbox 842 3025 1151 3073">
           <span class="alternatives">
@@ -181,8 +133,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 525 3126 1469 3168">
         <span id="w_21" class="ocr_word" title="bbox 525 3131 666 3168">
           <span class="alternatives">
@@ -223,8 +173,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
     </div>
   </body>
 </html>
