--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0335.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0335.html
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
   <head>
-    <meta name="ocr-id" value="abbyy" />
-    <meta name="ocr-recognized" value="lines text" />
-    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css" />
-    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
+    <meta name="ocr-id" value="abbyy"/>
+    <meta name="ocr-recognized" value="lines text"/>
+    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css"/>
+    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8"/>
     <title>ocr</title>
   </head>
   <body>
     <div class="ocr_page" id="i0335.png">
-      <!--<div class="ocr_carea" title="bbox 76 838 1946 3268">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 775 849 1269 901">
         <span id="w_0" class="ocr_word" title="bbox 775 849 1269 901">
           <span class="alternatives">
@@ -19,8 +17,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 224 1022 1929 1082">
         <span id="w_1" class="ocr_word" title="bbox 224 1022 336 1071">
           <span class="alternatives">
@@ -36,7 +32,7 @@
         </span>
         <span id="w_3" class="ocr_word" title="bbox 541 1022 711 1064">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">J)avidis</ins>
+            <ins title="nlp 2.00">Danidis</ins>
           </span>
         </span>
         <span id="w_4" class="ocr_word" title="bbox 750 1025 1058 1078">
@@ -59,8 +55,7 @@
         </span>
         <span id="w_7" class="ocr_word" title="bbox 1413 1028 1590 1082">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">primura</ins>
-            <del title="nlp 0.90">primura</del>
+            <ins title="nlp 2.00">primum</ins>
           </span>
         </span>
         <span id="w_8" class="ocr_word" title="bbox 1630 1031 1840 1073">
@@ -201,26 +196,14 @@
         </span>
         <span id="w_30" class="ocr_word" title="bbox 1855 1195 1930 1234">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Ar-</ins>
+            <ins title="nlp 2.00">Armeniacarum</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 109 1262 1927 1327">
-        <span id="w_31" class="ocr_word" title="bbox 109 1262 388 1304">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">meniacarum</ins>
-            <del title="nlp 0.90">Armeniacarum</del>
-          </span>
-        </span>
         <span id="w_32" class="ocr_word" title="bbox 412 1263 556 1318">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">peritis</ins>
-            <del title="nlp 0.90">peritis</del>
-          </span>
-        </span>
-        <span id="w_33" class="ocr_word" title="bbox 572 1263 601 1317">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">’)</ins>
+            <ins title="nlp 2.00">peritis1)</ins>
           </span>
         </span>
         <span id="w_34" class="ocr_word" title="bbox 635 1262 947 1317">
@@ -323,8 +306,7 @@
         </span>
         <span id="w_50" class="ocr_word" title="bbox 1727 1351 1926 1394">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">libroruni</ins>
-            <del title="nlp 0.90">libroruni</del>
+            <ins title="nlp 2.00">librorum</ins>
           </span>
         </span>
       </span>
@@ -612,8 +594,7 @@
         </span>
         <span id="w_97" class="ocr_word" title="bbox 710 1743 1002 1798">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Olj’mpiodoro</ins>
-            <del title="nlp 0.90">Olj’mpiodoro</del>
+            <ins title="nlp 2.00">Olympiodoro</ins>
           </span>
         </span>
         <span id="w_98" class="ocr_word" title="bbox 1033 1745 1117 1786">
@@ -710,22 +691,16 @@
         </span>
         <span id="w_113" class="ocr_word" title="bbox 1572 1827 1754 1882">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">ali&lt;|uem</ins>
+            <ins title="nlp 2.00">aliquem</ins>
           </span>
         </span>
         <span id="w_114" class="ocr_word" title="bbox 1779 1829 1921 1884">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Olyra-</ins>
+            <ins title="nlp 2.00">Olympiodori</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 101 1900 1920 1958">
-        <span id="w_115" class="ocr_word" title="bbox 101 1900 260 1954">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">piodori</ins>
-            <del title="nlp 0.90">Olyrapiodori</del>
-          </span>
-        </span>
         <span id="w_116" class="ocr_word" title="bbox 291 1901 537 1957">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">discipulum</ins>
@@ -782,17 +757,11 @@
         </span>
         <span id="w_125" class="ocr_word" title="bbox 1813 1923 1920 1950">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">com-</ins>
+            <ins title="nlp 2.00">commentatorum,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 101 1984 1919 2038">
-        <span id="w_126" class="ocr_word" title="bbox 101 1985 388 2030">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">mentatorum,</ins>
-            <del title="nlp 0.90">commentatorum,</del>
-          </span>
-        </span>
         <span id="w_127" class="ocr_word" title="bbox 423 1987 468 2023">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">ut</ins>
@@ -801,8 +770,7 @@
         </span>
         <span id="w_128" class="ocr_word" title="bbox 498 1997 591 2023">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">sues</ins>
-            <del title="nlp 0.90">sues</del>
+            <ins title="nlp 2.00">suos</ins>
           </span>
         </span>
         <span id="w_129" class="ocr_word" title="bbox 624 1984 852 2036">
@@ -849,8 +817,7 @@
         </span>
         <span id="w_136" class="ocr_word" title="bbox 1762 1994 1919 2030">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">vertero</ins>
-            <del title="nlp 0.90">vertero</del>
+            <ins title="nlp 2.00">vertere</ins>
           </span>
         </span>
       </span>
@@ -1022,12 +989,10 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 214 2346 1918 2394">
         <span id="w_164" class="ocr_word" title="bbox 214 2347 238 2386">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">^)</ins>
+            <ins title="nlp 2.00">1)</ins>
           </span>
         </span>
         <span id="w_165" class="ocr_word" title="bbox 272 2346 320 2379">
@@ -1044,8 +1009,7 @@
         </span>
         <span id="w_167" class="ocr_word" title="bbox 520 2347 676 2381">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Armeiiii</ins>
-            <del title="nlp 0.90">Armeiiii</del>
+            <ins title="nlp 2.00">Armenii</ins>
           </span>
         </span>
         <span id="w_168" class="ocr_word" title="bbox 704 2349 775 2382">
@@ -1062,7 +1026,7 @@
         </span>
         <span id="w_170" class="ocr_word" title="bbox 877 2349 1017 2393">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">sc/iptis</ins>
+            <ins title="nlp 2.00">scriptis</ins>
           </span>
         </span>
         <span id="w_171" class="ocr_word" title="bbox 1052 2351 1123 2394">
@@ -1073,8 +1037,7 @@
         </span>
         <span id="w_172" class="ocr_word" title="bbox 1150 2350 1186 2384">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">G.</ins>
-            <del title="nlp 0.90">G.</del>
+            <ins title="nlp 2.00">C.</ins>
           </span>
         </span>
         <span id="w_173" class="ocr_word" title="bbox 1202 2351 1236 2384">
@@ -1091,8 +1054,7 @@
         </span>
         <span id="w_175" class="ocr_word" title="bbox 1463 2352 1644 2393">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">(Mimolre</ins>
-            <del title="nlp 0.90">(Mimolre</del>
+            <ins title="nlp 2.00">(Mémoire</ins>
           </span>
         </span>
         <span id="w_176" class="ocr_word" title="bbox 1672 2365 1728 2384">
@@ -1101,9 +1063,9 @@
             <del title="nlp 0.90">sur</del>
           </span>
         </span>
-        <span id="w_177" class="ocr_word" title="bbox 1754 2353 1787 2385" xml:lang="grc">
+        <span id="w_177" class="ocr_word" title="bbox 1754 2353 1787 2385" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ία</ins>
+            <ins title="nlp 2.00">la</ins>
           </span>
         </span>
         <span id="w_178" class="ocr_word" title="bbox 1814 2355 1862 2387">
@@ -1140,7 +1102,7 @@
         </span>
         <span id="w_183" class="ocr_word" title="bbox 416 2405 540 2449">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">David^</ins>
+            <ins title="nlp 2.00">David,</ins>
           </span>
         </span>
         <span id="w_184" class="ocr_word" title="bbox 570 2406 762 2451">
@@ -1163,7 +1125,7 @@
         </span>
         <span id="w_187" class="ocr_word" title="bbox 1135 2409 1248 2451">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">18"29),</ins>
+            <ins title="nlp 2.00">1829),</ins>
           </span>
         </span>
         <span id="w_188" class="ocr_word" title="bbox 1282 2410 1340 2454">
@@ -1198,17 +1160,11 @@
         </span>
         <span id="w_193" class="ocr_word" title="bbox 1799 2413 1916 2447">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Arme-</ins>
+            <ins title="nlp 2.00">Armeniaco,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 96 2462 1915 2514">
-        <span id="w_194" class="ocr_word" title="bbox 96 2462 205 2504">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">niaco,</ins>
-            <del title="nlp 0.90">Armeniaco,</del>
-          </span>
-        </span>
         <span id="w_195" class="ocr_word" title="bbox 244 2464 303 2507">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">qui</ins>
@@ -1235,8 +1191,7 @@
         </span>
         <span id="w_199" class="ocr_word" title="bbox 1109 2469 1220 2509">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">afl’ert,</ins>
-            <del title="nlp 0.90">afl’ert,</del>
+            <ins title="nlp 2.00">affert,</ins>
           </span>
         </span>
         <span id="w_200" class="ocr_word" title="bbox 1258 2480 1334 2502">
@@ -1313,7 +1268,7 @@
         </span>
         <span id="w_212" class="ocr_word" title="bbox 1268 2537 1332 2571">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">sq.,</ins>
+            <ins title="nlp 2.00">sq.,</ins>
           </span>
         </span>
         <span id="w_213" class="ocr_word" title="bbox 1372 2527 1557 2561">
@@ -1457,7 +1412,7 @@
         </span>
         <span id="w_236" class="ocr_word" title="bbox 704 2641 843 2686">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">80,5sq.</ins>
+            <ins title="nlp 2.00">80,5sq.</ins>
           </span>
         </span>
         <span id="w_237" class="ocr_word" title="bbox 871 2643 1074 2676">
@@ -1586,7 +1541,7 @@
         </span>
         <span id="w_257" class="ocr_word" title="bbox 465 2757 532 2799">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">{die</ins>
+            <ins title="nlp 2.00">(die</ins>
           </span>
         </span>
         <span id="w_258" class="ocr_word" title="bbox 568 2757 715 2790">
@@ -1603,8 +1558,7 @@
         </span>
         <span id="w_260" class="ocr_word" title="bbox 808 2761 901 2802">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">filnf</ins>
-            <del title="nlp 0.90">filnf</del>
+            <ins title="nlp 2.00">fünf</ins>
           </span>
         </span>
         <span id="w_261" class="ocr_word" title="bbox 922 2760 1032 2792">
@@ -1706,8 +1660,7 @@
         </span>
         <span id="w_277" class="ocr_word" title="bbox 1503 2820 1713 2854">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">scholiorura</ins>
-            <del title="nlp 0.90">scholiorura</del>
+            <ins title="nlp 2.00">scholiorum</ins>
           </span>
         </span>
         <span id="w_278" class="ocr_word" title="bbox 1734 2826 1910 2855">
@@ -1824,7 +1777,7 @@
         </span>
         <span id="w_296" class="ocr_word" title="bbox 863 2937 1103 2979">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">([uaesiturum</ins>
+            <ins title="nlp 2.00">quaesiturum</ins>
           </span>
         </span>
         <span id="w_297" class="ocr_word" title="bbox 1133 2947 1209 2970">
@@ -1903,8 +1856,7 @@
         </span>
         <span id="w_309" class="ocr_word" title="bbox 1213 2995 1372 3028">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">iuvenies</ins>
-            <del title="nlp 0.90">iuvenies</del>
+            <ins title="nlp 2.00">invenies</ins>
           </span>
         </span>
         <span id="w_310" class="ocr_word" title="bbox 1400 3006 1419 3028">
@@ -1941,8 +1893,7 @@
         </span>
         <span id="w_315" class="ocr_word" title="bbox 175 3048 312 3092">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">heiliyen</ins>
-            <del title="nlp 0.90">heiliyen</del>
+            <ins title="nlp 2.00">heiligen</ins>
           </span>
         </span>
         <span id="w_316" class="ocr_word" title="bbox 342 3049 462 3091">
@@ -2006,15 +1957,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 92 3106 1907 3156">
-        <span id="w_326" class="ocr_word" title="bbox 92 3114 123 3146" xml:lang="grc">
+        <span id="w_326" class="ocr_word" title="bbox 92 3114 123 3146" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">ί́</ins>
+            <ins title="nlp 2.00">p.</ins>
           </span>
         </span>
         <span id="w_327" class="ocr_word" title="bbox 141 3106 355 3150">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">XXXN’Isq.</ins>
-            <del title="nlp 0.90">XXXN’Isq.</del>
+            <ins title="nlp 2.00">XXXVI sq.</ins>
           </span>
         </span>
         <span id="w_328" class="ocr_word" title="bbox 383 3112 417 3142">
@@ -2073,8 +2023,7 @@
         </span>
         <span id="w_337" class="ocr_word" title="bbox 1766 3121 1907 3156">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">isagoge</ins>
-            <del title="nlp 0.90">isagoge</del>
+            <ins title="nlp 2.00">Isagoge</ins>
           </span>
         </span>
       </span>
@@ -2157,8 +2106,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
     </div>
   </body>
 </html>
