--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0699.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0699.html
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
   <head>
-    <meta name="ocr-id" value="abbyy" />
-    <meta name="ocr-recognized" value="lines text" />
-    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css" />
-    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
+    <meta name="ocr-id" value="abbyy"/>
+    <meta name="ocr-recognized" value="lines text"/>
+    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css"/>
+    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8"/>
     <title>ocr</title>
   </head>
   <body>
     <div class="ocr_page" id="i0699.png">
-      <!--<div class="ocr_carea" title="bbox 992 1952 2060 2322">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 1165 1963 1885 2014">
         <span id="w_0" class="ocr_word" title="bbox 1165 1967 1358 2014">
           <span class="alternatives">
@@ -75,8 +73,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 1029 2263 2028 2317">
         <span id="w_10" class="ocr_word" title="bbox 1029 2268 1354 2317">
           <span class="alternatives">
@@ -103,10 +99,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
-      <!--<div class="ocr_carea" title="bbox 862 2620 1990 3032">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 877 2631 1974 2683">
         <span id="w_14" class="ocr_word" title="bbox 877 2640 940 2683">
           <span class="alternatives">
@@ -133,8 +125,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 880 2706 1406 2759">
         <span id="w_18" class="ocr_word" title="bbox 880 2706 1008 2757">
           <span class="alternatives">
@@ -148,12 +138,10 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 880 2774 973 2823">
         <span id="w_20" class="ocr_word" title="bbox 880 2774 973 2823">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">A25</ins>
+            <ins title="nlp 2.00">A25</ins>
           </span>
         </span>
       </span>
@@ -167,7 +155,7 @@
       <span class="ocr_line" title="bbox 877 2904 1009 2951">
         <span id="w_22" class="ocr_word" title="bbox 877 2904 1009 2951">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">V.18</ins>
+            <ins title="nlp 2.00">V.18</ins>
           </span>
         </span>
       </span>
@@ -180,23 +168,17 @@
         </span>
         <span id="w_24" class="ocr_word" title="bbox 1048 2972 1143 3020">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">1-3</ins>
+            <ins title="nlp 2.00">1-3</ins>
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
-      <!--<div class="ocr_carea" title="bbox 2030 3198 2168 3294">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 2044 3216 2152 3290">
         <span id="w_25" class="ocr_word" title="bbox 2044 3216 2152 3290">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">3o</ins>
+            <ins title="nlp 2.00">3o</ins>
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
     </div>
   </body>
 </html>
