--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0338.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0338.html
@@ -1,20 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
   <head>
-    <meta name="ocr-id" value="abbyy" />
-    <meta name="ocr-recognized" value="lines text" />
-    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css" />
-    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
+    <meta name="ocr-id" value="abbyy"/>
+    <meta name="ocr-recognized" value="lines text"/>
+    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css"/>
+    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8"/>
     <title>ocr</title>
   </head>
   <body>
     <div class="ocr_page" id="i0338.png">
-      <!--<div class="ocr_carea" title="bbox 242 106 2170 1920">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 320 113 1385 155">
         <span id="w_0" class="ocr_word" title="bbox 320 133 383 155">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">v„i</ins>
+            <ins title="nlp 2.00">VIII</ins>
           </span>
         </span>
         <span id="w_1" class="ocr_word" title="bbox 1075 113 1385 148">
@@ -24,8 +22,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 323 230 2143 290">
         <span id="w_2" class="ocr_word" title="bbox 323 239 411 279">
           <span class="alternatives">
@@ -35,8 +31,7 @@
         </span>
         <span id="w_3" class="ocr_word" title="bbox 474 234 739 290">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">(juamobrcni</ins>
-            <del title="nlp 0.90">(juamobrcni</del>
+            <ins title="nlp 2.00">quamobrem</ins>
           </span>
         </span>
         <span id="w_4" class="ocr_word" title="bbox 779 232 820 273">
@@ -83,21 +78,14 @@
         </span>
         <span id="w_11" class="ocr_word" title="bbox 1991 247 2143 274">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">memo-</ins>
+            <ins title="nlp 2.00">memoriam</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 323 310 2145 369">
-        <span id="w_12" class="ocr_word" title="bbox 323 318 425 359">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">riam</ins>
-            <del title="nlp 0.90">memoriam</del>
-          </span>
-        </span>
         <span id="w_13" class="ocr_word" title="bbox 458 329 523 356">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">mc</ins>
-            <del title="nlp 0.90">mc</del>
+            <ins title="nlp 2.00">me</ins>
           </span>
         </span>
         <span id="w_14" class="ocr_word" title="bbox 555 313 775 369">
@@ -163,13 +151,10 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 257 471 2146 529">
         <span id="w_24" class="ocr_word" title="bbox 257 480 311 523">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">V’</ins>
-            <del title="nlp 0.90">V’</del>
+            <ins title="nlp 2.00">V2</ins>
           </span>
         </span>
         <span id="w_25" class="ocr_word" title="bbox 443 476 506 518">
@@ -233,8 +218,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 324 551 2147 610">
         <span id="w_35" class="ocr_word" title="bbox 324 557 551 602">
           <span class="alternatives">
@@ -298,8 +281,7 @@
         </span>
         <span id="w_45" class="ocr_word" title="bbox 1922 554 2147 610">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">archetype</ins>
-            <del title="nlp 0.90">archetype</del>
+            <ins title="nlp 2.00">archetypo</ins>
           </span>
         </span>
       </span>
@@ -386,7 +368,7 @@
         </span>
         <span id="w_59" class="ocr_word" title="bbox 635 728 739 768">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">(|uae</ins>
+            <ins title="nlp 2.00">quae</ins>
           </span>
         </span>
         <span id="w_60" class="ocr_word" title="bbox 777 713 995 765">
@@ -397,8 +379,7 @@
         </span>
         <span id="w_61" class="ocr_word" title="bbox 1032 712 1400 768">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">perpeiiderentur,</ins>
-            <del title="nlp 0.90">perpeiiderentur,</del>
+            <ins title="nlp 2.00">perpenderentur,</ins>
           </span>
         </span>
         <span id="w_62" class="ocr_word" title="bbox 1433 712 1668 768">
@@ -420,13 +401,10 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 258 792 2149 849">
         <span id="w_65" class="ocr_word" title="bbox 258 797 452 841">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">VHertia</ins>
-            <del title="nlp 0.90">VHertia</del>
+            <ins title="nlp 2.00">V3 tertia</ins>
           </span>
         </span>
         <span id="w_66" class="ocr_word" title="bbox 497 809 644 837">
@@ -497,8 +475,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 442 953 2151 1012">
         <span id="w_77" class="ocr_word" title="bbox 442 958 645 1012">
           <span class="alternatives">
@@ -550,21 +526,14 @@
         </span>
         <span id="w_85" class="ocr_word" title="bbox 2024 954 2151 995">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Bran-</ins>
+            <ins title="nlp 2.00">Brandisii</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 328 1032 2149 1090">
-        <span id="w_86" class="ocr_word" title="bbox 328 1037 422 1079">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">disii</ins>
-            <del title="nlp 0.90">Brandisii</del>
-          </span>
-        </span>
         <span id="w_87" class="ocr_word" title="bbox 451 1034 661 1089">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">scholiis’)</ins>
-            <del title="nlp 0.90">scholiis’</del>
+            <ins title="nlp 2.00">scholiis1)</ins>
           </span>
         </span>
         <span id="w_88" class="ocr_word" title="bbox 695 1035 754 1090">
@@ -575,22 +544,7 @@
         </span>
         <span id="w_89" class="ocr_word" title="bbox 782 1035 890 1076">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">r2’^3</ins>
-          </span>
-        </span>
-        <span id="w_90" class="ocr_word" title="bbox 896 1058 947 1063">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">—</ins>
-          </span>
-        </span>
-        <span id="w_91" class="ocr_word" title="bbox 956 1032 1033 1075">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">16^’</ins>
-          </span>
-        </span>
-        <span id="w_92" class="ocr_word" title="bbox 1042 1035 1132 1088">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">42),</ins>
+            <ins title="nlp 2.00">12a3—16b42),</ins>
           </span>
         </span>
         <span id="w_93" class="ocr_word" title="bbox 1167 1034 1302 1090">
@@ -601,19 +555,8 @@
         </span>
         <span id="w_94" class="ocr_word" title="bbox 1326 1035 1424 1075">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">XIX</ins>
+            <ins class="alt" title="nlp 2.00">XIX—XXIV,</ins>
             <del title="nlp 0.90">XIX</del>
-          </span>
-        </span>
-        <span id="w_95" class="ocr_word" title="bbox 1428 1059 1481 1063">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">—</ins>
-          </span>
-        </span>
-        <span id="w_96" class="ocr_word" title="bbox 1485 1035 1636 1087">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">XXIV,</ins>
-            <del title="nlp 0.90">XXIV,</del>
           </span>
         </span>
         <span id="w_97" class="ocr_word" title="bbox 1671 1049 1775 1089">
@@ -636,21 +579,14 @@
         </span>
         <span id="w_100" class="ocr_word" title="bbox 2017 1034 2149 1090">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">philo-</ins>
+            <ins title="nlp 2.00">philosophiae</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 327 1114 2152 1172">
-        <span id="w_101" class="ocr_word" title="bbox 526 1115 712 1171">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">partibus</ins>
-            <del title="nlp 0.90">philopartibus</del>
-          </span>
-        </span>
         <span id="w_102" class="ocr_word" title="bbox 744 1115 802 1170">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">(p.</ins>
-            <del title="nlp 0.90">(p.</del>
+            <ins title="nlp 2.00">partibus (p.</ins>
           </span>
         </span>
         <span id="w_103" class="ocr_word" title="bbox 824 1115 921 1168">
@@ -660,12 +596,7 @@
         </span>
         <span id="w_104" class="ocr_word" title="bbox 927 1142 974 1145">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">—</ins>
-          </span>
-        </span>
-        <span id="w_105" class="ocr_word" title="bbox 983 1115 1128 1169">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">7C,28)</ins>
+            <ins title="nlp 2.00">—76.28</ins>
           </span>
         </span>
         <span id="w_106" class="ocr_word" title="bbox 1150 1115 1364 1156">
@@ -720,13 +651,12 @@
         </span>
         <span id="w_114" class="ocr_word" title="bbox 613 1194 894 1250">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">2)liilosop1iiae</ins>
+            <ins title="nlp 2.00">philosophiae</ins>
           </span>
         </span>
         <span id="w_115" class="ocr_word" title="bbox 916 1195 1045 1235">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Uhello</ins>
-            <del title="nlp 0.90">Uhello</del>
+            <ins title="nlp 2.00">libello</ins>
           </span>
         </span>
         <span id="w_116" class="ocr_word" title="bbox 1077 1195 1332 1248">
@@ -743,13 +673,12 @@
         </span>
         <span id="w_118" class="ocr_word" title="bbox 1459 1194 1644 1249">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Konigst.</ins>
-            <del title="nlp 0.90">Konigst.</del>
+            <ins title="nlp 2.00">Königst.</ins>
           </span>
         </span>
         <span id="w_119" class="ocr_word" title="bbox 1669 1195 1830 1249">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">Gymn.,</ins>
+            <ins title="nlp 2.00">Gymn.,</ins>
           </span>
         </span>
         <span id="w_120" class="ocr_word" title="bbox 1865 1195 2003 1236">
@@ -771,19 +700,9 @@
             <del title="nlp 0.90">p.</del>
           </span>
         </span>
-        <span id="w_123" class="ocr_word" title="bbox 395 1277 448 1318">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">10</ins>
-          </span>
-        </span>
         <span id="w_124" class="ocr_word" title="bbox 450 1301 503 1305">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">—</ins>
-          </span>
-        </span>
-        <span id="w_125" class="ocr_word" title="bbox 506 1275 581 1330">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">23)</ins>
+            <ins class="alt" title="nlp 2.00">10—23)</ins>
           </span>
         </span>
         <span id="w_126" class="ocr_word" title="bbox 615 1289 661 1316">
@@ -928,22 +847,7 @@
         </span>
         <span id="w_149" class="ocr_word" title="bbox 707 1435 846 1477">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">1G’’^44</ins>
-          </span>
-        </span>
-        <span id="w_150" class="ocr_word" title="bbox 851 1461 903 1465">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">—</ins>
-          </span>
-        </span>
-        <span id="w_151" class="ocr_word" title="bbox 907 1437 957 1477">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">21</ins>
-          </span>
-        </span>
-        <span id="w_152" class="ocr_word" title="bbox 970 1435 1051 1477">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">’^42</ins>
+            <ins title="nlp 2.00">16a44—21b42</ins>
           </span>
         </span>
         <span id="w_153" class="ocr_word" title="bbox 1084 1436 1289 1491">
@@ -983,14 +887,9 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 328 1515 2153 1573">
-        <span id="w_159" class="ocr_word" title="bbox 328 1540 382 1546">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">—</ins>
-          </span>
-        </span>
         <span id="w_160" class="ocr_word" title="bbox 387 1516 531 1570">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">88,26)</ins>
+            <ins class="alt" title="nlp 2.00">—88,26)</ins>
           </span>
         </span>
         <span id="w_161" class="ocr_word" title="bbox 578 1516 779 1571">
@@ -1037,12 +936,7 @@
         </span>
         <span id="w_168" class="ocr_word" title="bbox 1647 1517 1731 1559">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">434</ins>
-          </span>
-        </span>
-        <span id="w_169" class="ocr_word" title="bbox 1741 1543 1794 1545" xml:lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἡ</ins>
+            <ins title="nlp 2.00">434—442</ins>
           </span>
         </span>
         <span id="w_170" class="ocr_word" title="bbox 1928 1532 1976 1558">
@@ -1133,8 +1027,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 473 1791 775 1833">
         <span id="w_184" class="ocr_word" title="bbox 473 1791 556 1833">
           <span class="alternatives">
@@ -1176,19 +1068,17 @@
         </span>
         <span id="w_190" class="ocr_word" title="bbox 615 1872 717 1913">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">x\ov.</ins>
+            <ins title="nlp 2.00">Nov.</ins>
           </span>
         </span>
         <span id="w_191" class="ocr_word" title="bbox 742 1871 919 1913">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">MCiMIV</ins>
-            <del title="nlp 0.90">MCiMIV</del>
+            <ins title="nlp 2.00">MCMIV</ins>
           </span>
         </span>
         <span id="w_192" class="ocr_word" title="bbox 1783 1875 1860 1915">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Ad.</ins>
-            <del title="nlp 0.90">Ad.</del>
+            <ins title="nlp 2.00">Ad.</ins>
           </span>
         </span>
         <span id="w_193" class="ocr_word" title="bbox 1895 1874 2042 1916">
@@ -1198,14 +1088,10 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
-      <!--<div class="ocr_carea" title="bbox 318 2046 2156 2164">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 452 2056 2156 2101">
         <span id="w_194" class="ocr_word" title="bbox 452 2057 477 2096">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">^)</ins>
+            <ins title="nlp 2.00">1)</ins>
           </span>
         </span>
         <span id="w_195" class="ocr_word" title="bbox 511 2056 659 2090">
@@ -1280,17 +1166,11 @@
         </span>
         <span id="w_207" class="ocr_word" title="bbox 2073 2057 2156 2090">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Mar-</ins>
+            <ins title="nlp 2.00">Marcianus</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 334 2115 1497 2160">
-        <span id="w_208" class="ocr_word" title="bbox 334 2115 454 2148">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cianus</ins>
-            <del title="nlp 0.90">Marcianus</del>
-          </span>
-        </span>
         <span id="w_209" class="ocr_word" title="bbox 483 2115 548 2148">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">202</ins>
@@ -1355,8 +1235,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
     </div>
   </body>
 </html>
