--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0007.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0007.html
@@ -1,48 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
   <head>
-    <meta name="ocr-id" value="abbyy" />
-    <meta name="ocr-recognized" value="lines text" />
-    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css" />
-    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
+    <meta name="ocr-id" value="abbyy"/>
+    <meta name="ocr-recognized" value="lines text"/>
+    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css"/>
+    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8"/>
     <title>ocr</title>
   </head>
   <body>
     <div class="ocr_page" id="i0007.png">
-      <!--<div class="ocr_carea" title="bbox 1042 120 1206 230">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 1056 140 1206 230">
         <span id="w_0" class="ocr_word" title="bbox 1056 140 1206 230">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">^Oy</ins>
+            <ins title="nlp 2.00">30</ins>
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
-      <!--<div class="ocr_carea" title="bbox 1960 192 2084 242">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 1975 200 2079 242">
         <span id="w_1" class="ocr_word" title="bbox 1975 200 2001 242">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">/</ins>
-          </span>
-        </span>
-        <span id="w_2" class="ocr_word" title="bbox 2022 208 2045 238">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">^-</ins>
-          </span>
-        </span>
-        <span id="w_3" class="ocr_word" title="bbox 2062 224 2079 242">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">r</ins>
+            <ins title="nlp 2.00">250</ins>
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
-      <!--<div class="ocr_carea" title="bbox 2066 210 2132 276">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 2066 214 2116 272">
         <span id="w_4" class="ocr_word" title="bbox 2066 214 2116 272">
           <span class="alternatives">
@@ -50,8 +30,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
     </div>
   </body>
 </html>
